# d4utils

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: pr.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/d4utils/: __init__.py  __main__.py  arguments.py  count.py  d4.py  options.py  queue.py  sum.py
tests/: __init__.py  conftest.py  test_d4.py  test_main.py
