[project]
name = "d4utils"
version = "0.1.0"
description = "D4Utils - additional utilities to handle d4 coverage files"
authors = [
    { name = "Per Unneberg", email = "per.unneberg@scilifelab.se" }
]
dependencies = [
    "click~=8.1.7",
    "pyd4~=0.3.9",
    "tqdm~=4.66.5",
    "pandas~=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
d4utils = "d4utils.__main__:main"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright~=1.1.377",
    "pytest~=8.3.2",
    "pre-commit~=3.8.0",
    "pandas-stubs~=2.2.2.240807",
]

[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = [
  "A",    # warn about shadowing built-ins
  "E",    # style stuff, whitespaces
  "F",    # important pyflakes lints
  "I",    # import sorting
  "N",    # naming
  "T100", # breakpoints (probably don't want these in prod!)
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["tseda"]


[tool.pyright]
venvPath = "."          # rye installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
include = ["src"]
pythonVersion = "3.11"  # if library, specify the _lowest_ you support
reportMissingTypeStubs = false

[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
test = "rye test"
precommit = "rye run pre-commit"
all = { chain = ["fmt", "lint", "check", "test", "precommit"] }

[tool.pytest.ini_options]
addopts = "--doctest-modules"
